extract provider into common lib

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Common</string>
+    <string name="content_authority">com.example.android.sunshine.app</string>
 </resources>
