--- a/wearable/src/main/res/values/strings.xml
+++ b/wearable/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Wearable</string>
-    <string name="my_analog_name">My Weather Analog</string>
+    <string name="my_analog_name">Sunshine Watch</string>
 </resources>
